syntax = "proto3";
option go_package = "github.com/djpiper28/rpg-book/desktop_client/backend/pb_project_note";

message NoteHandle {
  string id = 1;
}

message NoteDetails {
  string name = 1;
  string markdown = 2;
}

message Note {
  NoteHandle handle = 1;
  NoteDetails details = 2;
}
